gtkpod V0.43-CVS 
	IMPROVEMENT: speed-up of display refreshs.
	- Import of iTunesDB with full non-blocked display: 4x as fast (51''
	against 3'35'' on my 2459 songs)
	- Refresh of first sort tab, non-blocked: 20x as fast (0.65''
	against 13'' on my 2459 songs)
	- Refresh of first sort tab, blocked: 60x as fast (0.13''
	against 7.8'' on my 2459 songs)
	- Refresh of song list, non-blocked: 2x as fast (9'' against 18''
	on my 2459 songs)
gtkpod V0.43-1 28-Feb-2003
	BUGFIX: After DND operation songs were displayed twice in the
	master playlist (this was just a display artifact).
gtkpod V0.43 27-Feb-2003
        Preventive BUGFIX: in the code to import the iTunesDB all absolute
	references to positions in the iTunesDB were removed. Instead
	itunesdb.c now uses the header information to find the headers it
	needs. This should make it more reliable to read third party
	iTunesDB. This was also part of the problem with the ephpod import
	problem below (the other half of the problem was ephpod's not
	really conformant way of writing the database).

        BUGFIX: some iTunesDBs produced by ephpod could not be read (hang
	after reading the songs and before adding the playlists).
        
	New Feature: update song information from file when adding songs
	with identical filename (option)
	
        New Feature: update song information from file of selected songs
	(ctrl-u and menu item)

	BUGFIX: copy_song_to_ipod() there was a <5% chance that songs were
	overwritten by new songs during the copy process, if you deleted
	songs before adding new songs.

        BUGFIX: Deleting songs from the iPod only worked if you exported
	the iTunesDB twice.
	
	New Feature: Add Playlists (m3u and pls)

gtkpod V0.42 20-Feb-2003
        Bugfix: on first start gtkpod complained it could not create
	~/.gtkpod even though it could... (and vice versa).

	Improvement: display update can now be interrupted, selection
	changed at any time.

	Bugfix: gtkpod now sets bitrate (average bitrate for VBR)
